force-app/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Campaign_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Information from this field is pulled into Sales Invoice</description>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Data rom this field is being pulled into Sales Invoice</description>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Data from this field is pulled into Sales Invoice</description>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>TR1__Unique_Name__c</fullName>
        <description>Unique campaign identifier used for SFMC integration campaign template mapping</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique campaign identifier used for SFMC integration campaign template mapping</inlineHelpText>
        <label>Campaign Unique Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pi__Pardot_Campaign_Id__c</fullName>
        <description>The Pardot identifier for the connected campaign record</description>
        <externalId>true</externalId>
        <label>Pardot Campaign Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pi__Pardot_Has_Dependencies__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if Pardot has marketing assets using this campaign</description>
        <label>Pardot Has Dependencies</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Company__c</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>Dimension_2__c</columns>
        <columns>Dimension_3__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Campains_of_Type_C_R</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>C&amp;R</value>
        </filters>
        <label>All Campains of Type C&amp;R</label>
    </listViews>
    <listViews>
        <fullName>All_Completed_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>All Completed Campaigns</label>
        <sharedTo>
            <group>CIS_Communications_Team</group>
            <group>CIS_Finance_Team</group>
            <group>CIS_HE_Team</group>
            <group>CIS_Recruitment_Team</group>
            <group>CIS_SSA_Team</group>
            <group>CIS_SSEO_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Inactive_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Inactive Campaigns</label>
        <sharedTo>
            <group>CIS_Communications_Team</group>
            <group>CIS_Finance_Team</group>
            <group>CIS_HE_Team</group>
            <group>CIS_Recruitment_Team</group>
            <group>CIS_SSA_Team</group>
            <group>CIS_SSEO_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All campaigns</label>
    </listViews>
    <listViews>
        <fullName>C_R_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Recruitment Fair</value>
        </filters>
        <label>C&amp;R Campaigns</label>
        <sharedTo>
            <group>CIS_Communications_Team</group>
            <group>CIS_Finance_Team</group>
            <group>CIS_Recruitment_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Child_Protection_Workshops</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>CP Workshops</value>
        </filters>
        <label>Child Protection Workshops</label>
        <sharedTo>
            <group>CIS_Communications_Team</group>
            <group>CIS_Finance_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HE_Conferences</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>HE Conferences</value>
        </filters>
        <label>HE Conferences</label>
    </listViews>
    <listViews>
        <fullName>HE_Fairs</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>HE Fairs</value>
        </filters>
        <label>HE Fairs</label>
    </listViews>
    <listViews>
        <fullName>HE_Tours</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>HE Tours</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NUM_OPPORTUNITIES</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>HE Tours</label>
        <sharedTo>
            <group>CIS_HE_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Test_campaign_danielle</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Mine</filterScope>
        <label>Test campaign danielle</label>
    </listViews>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>